<resources>
    <string name="app_name">VehicleServiceRemainderApp</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signOut">Sign Out</string>
    <string name="createAccount">Create Account</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="vehicleName">Vehicle Name </string>
    <string name="vehicleNumber">Vehicle Number </string>
    <string name="recentServiceDate">Recently Vehicle serviced on </string>
    <string name="recentServiceMetreReading">Recent service odometer reading in kms </string>
    <string name="nextServiceDate">Next Vehicle service on </string>
    <string name="nextServiceMetreReading">Next service odometer reading at kms </string>
    <string name="vehicleInsuredDate">Vehicle Insured Date </string>
    <string name="vehicleInsuranceExpiryDate">Vehicle Insurance Expires on </string>
    <string name="engineOilReplacedDate">Engine Oil Replaced on </string>
    <string name="engineServiceDate">Engine Serviced on and odometer reading </string>
    <string name="brakeServiceDate">Brake serviced on </string>
    <string name="clutchReplacedDate">Clutch serviced on </string>
    <string name="batteryReplacedDate">Battery serviced on </string>
    <string name="mirrorReplacedDate">Mirrors  serviced on </string>
    <string name="airConditionReplacedDate">Air Conditioner serviced on </string>
    <string name="radiatorServicedDate">Radiator serviced on </string>
    <string name="chainReplacedDate">Chain Replaced on </string>
    <string name="backTyreReplacedDate">BackTyre Replaced on </string>
    <string name="frontTyreReplacedDate">FrontTyre Replaced on </string>
    <string name="vehicleSeatReplacedDate">Vehicle Seat Replaced on </string>
    <string name="headlightReplacedDate">Headlight Replaced on </string>
    <string name="indicatorReplacedDate">Indicator Replaced on </string>
    <string name="writeAboutVehicle">Write about your vehicle... </string>
    <string name="remainder">Add remainder </string>
    <string name="setAlarm">Set Alarm!!! </string>
    <string name="cancelAlarm">Cancel Alarm!!! </string>
    <string name="mandatory">Mandatory </string>
    <string name="addMoreDetails">Add more Vehicle Details </string>
    <string name="saveActivity">save activity </string>
    <string name="alarmSet">Alarm Set!!!!!!!!!!!! </string>
    <string name="alarmCancel">Alarm Cancelled!!! </string>
    <string name="alarmDate">Alarm set on : </string>
    <string name="alarmTime">Alarm set at : </string>
    <string name="selectDate">select date</string>
    <string name="selectTime">select time</string>
    <string name="saveData">save vehicle data</string>
    <string name="save">save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="alertAlarm">Do you want to Set Alarm??</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="note">Label Alarm</string>
    <string name="title_activity_display_vehicle_list">Display Vehicle List</string>
    <string name="done">Done</string>
    <string name="welcome">"Hello Welcome!!!"</string>
    <string name="addVehicle">Add</string>
    <string name="viewVehicleAdded">View Vehicles Added</string>
</resources>
